--- a/views/index.ejs
+++ b/views/index.ejs
@@ -103,7 +103,7 @@
       <div class="swiper-wrapper">
 
         <!-- SLIDE 1 -->
-        <div class="swiper-slide" style="background-image: url('assets/images/demo/1200x800/13-min.jpg');">
+        <div class="swiper-slide" style="background-image: url('/assets/images/demo/1200x800/13-min.jpg');">
           <div class="overlay dark-5"><!-- dark overlay [1 to 9 opacity] --></div>
 
           <div class="display-table">
@@ -283,16 +283,16 @@
 
 
 <!-- JAVASCRIPT FILES -->
-<script type="text/javascript">var plugin_path = 'assets/plugins/';</script>
-<script type="text/javascript" src="assets/plugins/jquery/jquery-2.2.3.min.js"></script>
+<script type="text/javascript">var plugin_path = '/assets/plugins/';</script>
+<script type="text/javascript" src="/assets/plugins/jquery/jquery-2.2.3.min.js"></script>
 
-<script type="text/javascript" src="assets/js/scripts.js"></script>
+<script type="text/javascript" src="/assets/js/scripts.js"></script>
 
 <!-- STYLESWITCHER - REMOVE -->
-<script async type="text/javascript" src="assets/plugins/styleswitcher/styleswitcher.js"></script>
+<script async type="text/javascript" src="/assets/plugins/styleswitcher/styleswitcher.js"></script>
 
 <!-- SWIPER SLIDER -->
-<script type="text/javascript" src="assets/plugins/slider.swiper/dist/js/swiper.min.js"></script>
-<script type="text/javascript" src="assets/js/view/demo.swiper_slider.js"></script>
+<script type="text/javascript" src="/assets/plugins/slider.swiper/dist/js/swiper.min.js"></script>
+<script type="text/javascript" src="/assets/js/view/demo.swiper_slider.js"></script>
 </body>
 </html>
