--- a/views/travel_plan_detail.ejs
+++ b/views/travel_plan_detail.ejs
@@ -17,15 +17,15 @@
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400%7CRaleway:300,400,500,600,700%7CLato:300,400,400italic,600,700" rel="stylesheet" type="text/css" />
 
 		<!-- CORE CSS -->
-		<link href="../../assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+		<link href="/assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 		
 		<!-- THEME CSS -->
-		<link href="../../assets/css/essentials.css" rel="stylesheet" type="text/css" />
-		<link href="../../assets/css/layout.css" rel="stylesheet" type="text/css" />
+		<link href="/assets/css/essentials.css" rel="stylesheet" type="text/css" />
+		<link href="/assets/css/layout.css" rel="stylesheet" type="text/css" />
 
 		<!-- PAGE LEVEL SCRIPTS -->
-		<link href="../../assets/css/header-1.css" rel="stylesheet" type="text/css" />
-		<link href="../../assets/css/color_scheme/green.css" rel="stylesheet" type="text/css" id="color_scheme" />
+		<link href="/assets/css/header-1.css" rel="stylesheet" type="text/css" />
+		<link href="/assets/css/color_scheme/green.css" rel="stylesheet" type="text/css" id="color_scheme" />
 	</head>
 
 	<!--
@@ -196,14 +196,14 @@
 
 							<!-- OWL SLIDER -->
 							<div class="owl-carousel buttons-autohide controlls-over" data-plugin-options='{"items": 1, "autoPlay": 4500, "autoHeight": false, "navigation": true, "pagination": true, "transitionStyle":"fadeUp", "progressBar":"false"}'>
-								<a class="lightbox" href="../../assets/images/demo/1200x800/10-min.jpg" data-plugin-options='{"type":"image"}'>
-									<img class="img-responsive" src="../../assets/images/demo/content_slider/10-min.jpg" alt="" />
+								<a class="lightbox" href="/assets/images/demo/1200x800/10-min.jpg" data-plugin-options='{"type":"image"}'>
+									<img class="img-responsive" src="/assets/images/demo/content_slider/10-min.jpg" alt="" />
 								</a>
-								<a class="lightbox" href="../../assets/images/demo/1200x800/3-min.jpg" data-plugin-options='{"type":"image"}'>
-									<img class="img-responsive" src="../../assets/images/demo/content_slider/3-min.jpg" alt="" />
+								<a class="lightbox" href="/assets/images/demo/1200x800/3-min.jpg" data-plugin-options='{"type":"image"}'>
+									<img class="img-responsive" src="/assets/images/demo/content_slider/3-min.jpg" alt="" />
 								</a>
-								<a class="lightbox" href="../../assets/images/demo/1200x800/21-min.jpg" data-plugin-options='{"type":"image"}'>
-									<img class="img-responsive" src="../../assets/images/demo/content_slider/21-min.jpg" alt="" />
+								<a class="lightbox" href="/assets/images/demo/1200x800/21-min.jpg" data-plugin-options='{"type":"image"}'>
+									<img class="img-responsive" src="/assets/images/demo/content_slider/21-min.jpg" alt="" />
 								</a>
 							</div>
 							<!-- /OWL SLIDER -->
@@ -297,7 +297,7 @@
 
 									<!-- user-avatar -->
 									<span class="user-avatar">
-										<img class="pull-left media-object" src="assets/images/avatar.png" width="64" height="64" alt="">
+										<img class="pull-left media-object" src="/assets/images/avatar.png" width="64" height="64" alt="">
 									</span>
 
 									<div class="media-body">
@@ -313,7 +313,7 @@
 
 									<!-- user-avatar -->
 									<span class="user-avatar">
-										<img class="pull-left media-object" src="assets/images/avatar.png" width="64" height="64" alt="">
+										<img class="pull-left media-object" src="/assets/images/avatar.png" width="64" height="64" alt="">
 									</span>
 
 									<div class="media-body">
@@ -329,7 +329,7 @@
 
 									<!-- user-avatar -->
 									<span class="user-avatar">
-										<img class="media-object" src="assets/images/avatar.png" width="64" height="64" alt="">
+										<img class="media-object" src="/assets/images/avatar.png" width="64" height="64" alt="">
 									</span>
 
 									<div class="media-body">
@@ -343,7 +343,7 @@
 
 											<!-- user-avatar -->
 											<span class="user-avatar">
-												<img class="media-object" src="assets/images/avatar.png" width="64" height="64" alt="">
+												<img class="media-object" src="/assets/images/avatar.png" width="64" height="64" alt="">
 											</span>
 
 											<div class="media-body">
@@ -421,142 +421,7 @@
 
 
 			<!-- FOOTER -->
-			<footer id="footer">
-				<div class="container">
-
-					<div class="row">
-						
-						<div class="col-md-3">
-							<!-- Footer Logo -->
-							<img class="footer-logo" src="assets/images/logo-footer.png" alt="" />
-
-							<!-- Small Description -->
-							<p>Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</p>
-
-							<!-- Contact Address -->
-							<address>
-								<ul class="list-unstyled">
-									<li class="footer-sprite address">
-										PO Box 21132<br>
-										Here Weare St, Melbourne<br>
-										Vivas 2355 Australia<br>
-									</li>
-									<li class="footer-sprite phone">
-										Phone: 1-800-565-2390
-									</li>
-									<li class="footer-sprite email">
-										<a href="mailto:support@yourname.com">support@yourname.com</a>
-									</li>
-								</ul>
-							</address>
-							<!-- /Contact Address -->
-
-						</div>
-
-						<div class="col-md-3">
-
-							<!-- Latest Blog Post -->
-							<h4 class="letter-spacing-1">LATEST NEWS</h4>
-							<ul class="footer-posts list-unstyled">
-								<li>
-									<a href="#">Donec sed odio dui. Nulla vitae elit libero, a pharetra augue</a>
-									<small>29 June 2015</small>
-								</li>
-								<li>
-									<a href="#">Nullam id dolor id nibh ultricies</a>
-									<small>29 June 2015</small>
-								</li>
-								<li>
-									<a href="#">Duis mollis, est non commodo luctus</a>
-									<small>29 June 2015</small>
-								</li>
-							</ul>
-							<!-- /Latest Blog Post -->
-
-						</div>
-
-						<div class="col-md-2">
-
-							<!-- Links -->
-							<h4 class="letter-spacing-1">EXPLORE SMARTY</h4>
-							<ul class="footer-links list-unstyled">
-								<li><a href="#">Home</a></li>
-								<li><a href="#">About Us</a></li>
-								<li><a href="#">Our Services</a></li>
-								<li><a href="#">Our Clients</a></li>
-								<li><a href="#">Our Pricing</a></li>
-								<li><a href="#">Smarty Tour</a></li>
-								<li><a href="#">Contact Us</a></li>
-							</ul>
-							<!-- /Links -->
-
-						</div>
-
-						<div class="col-md-4">
-
-							<!-- Newsletter Form -->
-							<h4 class="letter-spacing-1">KEEP IN TOUCH</h4>
-							<p>Subscribe to Our Newsletter to get Important News &amp; Offers</p>
-
-							<form class="validate" action="php/newsletter.php" method="post" data-success="Subscribed! Thank you!" data-toastr-position="bottom-right">
-								<div class="input-group">
-									<span class="input-group-addon"><i class="fa fa-envelope"></i></span>
-									<input type="email" id="email" name="email" class="form-control required" placeholder="Enter your Email">
-									<span class="input-group-btn">
-										<button class="btn btn-success" type="submit">Subscribe</button>
-									</span>
-								</div>
-							</form>
-							<!-- /Newsletter Form -->
-
-							<!-- Social Icons -->
-							<div class="margin-top-20">
-								<a href="#" class="social-icon social-icon-border social-facebook pull-left" data-toggle="tooltip" data-placement="top" title="Facebook">
-
-									<i class="icon-facebook"></i>
-									<i class="icon-facebook"></i>
-								</a>
-
-								<a href="#" class="social-icon social-icon-border social-twitter pull-left" data-toggle="tooltip" data-placement="top" title="Twitter">
-									<i class="icon-twitter"></i>
-									<i class="icon-twitter"></i>
-								</a>
-
-								<a href="#" class="social-icon social-icon-border social-gplus pull-left" data-toggle="tooltip" data-placement="top" title="Google plus">
-									<i class="icon-gplus"></i>
-									<i class="icon-gplus"></i>
-								</a>
-
-								<a href="#" class="social-icon social-icon-border social-linkedin pull-left" data-toggle="tooltip" data-placement="top" title="Linkedin">
-									<i class="icon-linkedin"></i>
-									<i class="icon-linkedin"></i>
-								</a>
-
-								<a href="#" class="social-icon social-icon-border social-rss pull-left" data-toggle="tooltip" data-placement="top" title="Rss">
-									<i class="icon-rss"></i>
-									<i class="icon-rss"></i>
-								</a>
-					
-							</div>
-							<!-- /Social Icons -->
-
-						</div>
-
-					</div>
-
-				</div>
-
-				<div class="copyright">
-					<div class="container">
-						<ul class="pull-right nomargin list-inline mobile-block">
-							<li><a href="#">Terms &amp; Conditions</a></li>
-							<li>&bull;</li>
-							<li><a href="#">Privacy</a></li>
-						</ul>
-						&copy; All Rights Reserved, Company LTD
-					</div>
-				</div>
-			</footer>
+			<%- include Footer.ejs %>
 			<!-- /FOOTER -->
 
 		</div>
@@ -576,12 +441,12 @@
 
 
 		<!-- JAVASCRIPT FILES -->
-		<<script type="text/javascript">var plugin_path = '../../assets/plugins/';</script>
-		<script type="text/javascript" src="../../assets/plugins/jquery/jquery-2.2.3.min.js"></script>
+		<<script type="text/javascript">var plugin_path = '/assets/plugins/';</script>
+		<script type="text/javascript" src="/assets/plugins/jquery/jquery-2.2.3.min.js"></script>
 
-		<script type="text/javascript" src="../../assets/js/scripts.js"></script>
+		<script type="text/javascript" src="/assets/js/scripts.js"></script>
 		
 		<!-- STYLESWITCHER - REMOVE -->
-		<script async type="text/javascript" src="../../assets/plugins/styleswitcher/styleswitcher.js"></script>
+		<script async type="text/javascript" src="/assets/plugins/styleswitcher/styleswitcher.js"></script>
 	</body>
 </html>
