--- a/views/schedule_list_detail.ejs
+++ b/views/schedule_list_detail.ejs
@@ -58,14 +58,14 @@
 			<section class="page-header dark page-header-xs">
 				<div class="container">
 
-					<h1>일본 여행 일정</h1>
+					<h1><%=schedule.title%></h1>
 
 					<!-- breadcrumbs -->
 					<ol class="breadcrumb">
 						<li><a href="/">Home</a></li>
 						<li><a href="#">일정</a></li>
-						<li><a href="#">여행 일정</a></li>
-						<li class="#">일본 일정</li>
+						<li><a href="/schedule/list">일정 목록</a></li>
+						<li class="#"><%=schedule.title%></li>
 					</ol><!-- /breadcrumbs -->
 
 				</div>
@@ -78,169 +78,254 @@
 			<!-- -->
 			<section>
 				<div class="container">
-					<!-- TIMELINE -->
-					<div class="timeline"><!-- .timeline-inverse = right position [left on RTL] -->
-						<div class="timeline-hline"><!-- horizontal line --></div>
+					<!-- LEFT -->
+					<div class="col-md-9 col-sm-9">
+						<!-- TIMELINE -->
+						<div class="timeline"><!-- .timeline-inverse = right position [left on RTL] -->
+							<div class="timeline-hline"><!-- horizontal line --></div>
 
-						<!-- POST ITEM -->
-						<div class="blog-post-item">
+							<!-- POST ITEM -->
+							<div class="blog-post-item">
 
-							<!-- timeline entry -->
-							<div class="timeline-entry rounded"><!-- .rounded = entry -->
-								<!--29<span>Jun</span>-->
-								<span>Day</span>1
-								<div class="timeline-vline"><!-- vertical line --></div>
+								<!-- timeline entry -->
+								<div class="timeline-entry rounded"><!-- .rounded = entry -->
+									<!--29<span>Jun</span>-->
+									<span>Day</span>1
+									<div class="timeline-vline"><!-- vertical line --></div>
+								</div>
+								<!-- /timeline entry -->
+
+								<!-- IMAGE -->
+								<figure class="margin-bottom-20">
+									<img class="img-responsive" src="/assets/images/demo/720x400/4-min.jpg" alt="">
+								</figure>
+
+								<h2><a href="blog-single-default.html">바닷가 여행 일정</a></h2>
+
+								<ul class="blog-post-info list-inline">
+									<li>
+										<a href="#">
+											<i class="fa fa-clock-o"></i>
+											<span class="font-lato">June 29, 2015</span>
+										</a>
+									</li>
+									<li>
+										<a href="#">
+											<i class="fa fa-comment-o"></i>
+											<span class="font-lato">28 Comments</span>
+										</a>
+									</li>
+									<li>
+										<a href="#">
+											<i class="fa fa-user"></i>
+											<span class="font-lato">John Doe</span>
+										</a>
+									</li>
+								</ul>
+
+								<p>일본 여행 첫날 ~~~~~~~...</p>
+								<a href="travel/detail" class="btn btn-reveal btn-default">
+									<i class="fa fa-plus"></i>
+									<span>자세히 보기</span>
+								</a>
+
 							</div>
-							<!-- /timeline entry -->
+							<!-- /POST ITEM -->
 
-							<!-- IMAGE -->
-							<figure class="margin-bottom-20">
-								<img class="img-responsive" src="/assets/images/demo/720x400/4-min.jpg" alt="">
-							</figure>
+							<!-- POST ITEM -->
+							<div class="blog-post-item">
 
-							<h2><a href="blog-single-default.html">바닷가 여행 일정</a></h2>
+								<!-- timeline entry -->
+								<div class="timeline-entry rounded"><!-- .rounded = entry -->
+									<!--29<span>Jun</span>-->
+									<span>Day</span>2
+									<div class="timeline-vline"><!-- vertical line --></div>
+								</div>
+								<!-- /timeline entry -->
 
-							<ul class="blog-post-info list-inline">
-								<li>
-									<a href="#">
-										<i class="fa fa-clock-o"></i>
-										<span class="font-lato">June 29, 2015</span>
-									</a>
-								</li>
-								<li>
-									<a href="#">
-										<i class="fa fa-comment-o"></i>
-										<span class="font-lato">28 Comments</span>
-									</a>
-								</li>
-								<li>
-									<a href="#">
-										<i class="fa fa-user"></i>
-										<span class="font-lato">John Doe</span>
-									</a>
-								</li>
-							</ul>
+								<!-- IMAGE -->
+								<figure class="margin-bottom-20">
+									<img class="img-responsive" src="/assets/images/demo/720x400/6-min.jpg" alt="">
+								</figure>
 
-							<p>일본 여행 첫날 ~~~~~~~...</p>
-							<a href="travel/detail" class="btn btn-reveal btn-default">
-								<i class="fa fa-plus"></i>
-								<span>자세히 보기</span>
-							</a>
+								<h2><a href="blog-single-default.html">바닷가 여행 일정</a></h2>
+
+								<ul class="blog-post-info list-inline">
+									<li>
+										<a href="#">
+											<i class="fa fa-clock-o"></i>
+											<span class="font-lato">June 29, 2015</span>
+										</a>
+									</li>
+									<li>
+										<a href="#">
+											<i class="fa fa-comment-o"></i>
+											<span class="font-lato">28 Comments</span>
+										</a>
+									</li>
+									<li>
+										<a href="#">
+											<i class="fa fa-user"></i>
+											<span class="font-lato">John Doe</span>
+										</a>
+									</li>
+								</ul>
+
+								<p>일본 여행 첫날 ~~~~~~~...</p>
+								<a href="detail" class="btn btn-reveal btn-default">
+									<i class="fa fa-plus"></i>
+									<span>자세히 보기</span>
+								</a>
+
+							</div>
+							<!-- /POST ITEM -->
+
+							<!-- POST ITEM -->
+							<div class="blog-post-item">
+
+								<!-- timeline entry -->
+								<div class="timeline-entry rounded"><!-- .rounded = entry -->
+									29<span>Jun</span>
+									<div class="timeline-vline"><!-- vertical line --></div>
+								</div>
+								<!-- /timeline entry -->
+
+								<!-- IMAGE -->
+								<figure class="margin-bottom-20">
+									<img class="img-responsive" src="/assets/images/demo/content_slider/10-min.jpg" alt="">
+								</figure>
+
+								<h2><a href="blog-single-default.html">BLOG IMAGE POST</a></h2>
+
+								<ul class="blog-post-info list-inline">
+									<li>
+										<a href="#">
+											<i class="fa fa-clock-o"></i>
+											<span class="font-lato">June 29, 2015</span>
+										</a>
+									</li>
+									<li>
+										<a href="#">
+											<i class="fa fa-comment-o"></i>
+											<span class="font-lato">28 Comments</span>
+										</a>
+									</li>
+									<li>
+										<i class="fa fa-folder-open-o"></i>
+
+										<a class="category" href="#">
+											<span class="font-lato">Design</span>
+										</a>
+										<a class="category" href="#">
+											<span class="font-lato">Photography</span>
+										</a>
+									</li>
+									<li>
+										<a href="#">
+											<i class="fa fa-user"></i>
+											<span class="font-lato">John Doe</span>
+										</a>
+									</li>
+								</ul>
+
+								<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+
+								<a href="blog-single-default.html" class="btn btn-reveal btn-default">
+									<i class="fa fa-plus"></i>
+									<span>Read More</span>
+								</a>
+
+							</div>
+							<!-- /POST ITEM -->
+
+
 
 						</div>
-						<!-- /POST ITEM -->
+						<!-- /TIMELINE -->
+					</div>
 
-						<!-- POST ITEM -->
-						<div class="blog-post-item">
+					<!-- RIGHT -->
+					<div class="col-md-3 col-sm-3">
 
-							<!-- timeline entry -->
-							<div class="timeline-entry rounded"><!-- .rounded = entry -->
-								<!--29<span>Jun</span>-->
-								<span>Day</span>2
-								<div class="timeline-vline"><!-- vertical line --></div>
+
+						<!-- side navigation -->
+						<div class="side-nav margin-bottom-60 margin-top-30">
+
+							<div class="side-nav-head">
+								<button class="fa fa-bars"></button>
+								<h4><%=schedule.title%></h4>
 							</div>
-							<!-- /timeline entry -->
+							<ul class="list-group list-group-bordered list-group-noicon uppercase">
+								<li class="list-group-item"><a href="#"><span class="size-11 text-muted pull">지역 : </span> <%=schedule.location%></a></li>
+								<li class="list-group-item"><a href="#"><span class="size-11 text-muted pull">세부지역 : </span> <%=schedule.detailLocation%></a></li>
+								<li class="list-group-item"><a href="#"><span class="size-11 text-muted pull">설명 : </span> <%=schedule.description%></a></li>
+								<li class="list-group-item"><a href="#"><span class="size-11 text-muted pull">시작날짜 : </span> <%=schedule.startDate%></a></li>
+								<li class="list-group-item"><a href="#"><span class="size-11 text-muted pull">마지막 날짜 : </span> <%=schedule.endDate%></a></li>
 
-							<!-- IMAGE -->
-							<figure class="margin-bottom-20">
-								<img class="img-responsive" src="../assets/images/demo/720x400/6-min.jpg" alt="">
-							</figure>
-
-							<h2><a href="blog-single-default.html">바닷가 여행 일정</a></h2>
-
-							<ul class="blog-post-info list-inline">
-								<li>
-									<a href="#">
-										<i class="fa fa-clock-o"></i>
-										<span class="font-lato">June 29, 2015</span>
-									</a>
-								</li>
-								<li>
-									<a href="#">
-										<i class="fa fa-comment-o"></i>
-										<span class="font-lato">28 Comments</span>
-									</a>
-								</li>
-								<li>
-									<a href="#">
-										<i class="fa fa-user"></i>
-										<span class="font-lato">John Doe</span>
-									</a>
-								</li>
 							</ul>
+							<!-- /side navigation -->
+						</div>
 
-							<p>일본 여행 첫날 ~~~~~~~...</p>
-							<a href="detail" class="btn btn-reveal btn-default">
-								<i class="fa fa-plus"></i>
-								<span>자세히 보기</span>
+						<!-- TAGS -->
+						<h3 class="hidden-xs size-16 margin-bottom-20">TAGS</h3>
+						<div class="hidden-xs margin-bottom-60">
+
+							<a class="tag" href="#">
+								<span class="txt">RESPONSIVE</span>
+								<span class="num">12</span>
+							</a>
+							<a class="tag" href="#">
+								<span class="txt">CSS</span>
+								<span class="num">3</span>
+							</a>
+							<a class="tag" href="#">
+								<span class="txt">HTML</span>
+								<span class="num">1</span>
+							</a>
+							<a class="tag" href="#">
+								<span class="txt">JAVASCRIPT</span>
+								<span class="num">28</span>
+							</a>
+							<a class="tag" href="#">
+								<span class="txt">DESIGN</span>
+								<span class="num">6</span>
+							</a>
+							<a class="tag" href="#">
+								<span class="txt">DEVELOPMENT</span>
+								<span class="num">3</span>
+							</a>
+						</div>
+
+						<hr />
+						<!-- SOCIAL ICONS -->
+						<div class="hidden-xs margin-top-30 margin-bottom-60">
+							<a href="#" class="social-icon social-icon-border social-facebook pull-left" data-toggle="tooltip" data-placement="top" title="Facebook">
+								<i class="icon-facebook"></i>
+								<i class="icon-facebook"></i>
 							</a>
 
-						</div>
-						<!-- /POST ITEM -->
-						<!-- POST ITEM -->
-						<div class="blog-post-item">
-
-							<!-- timeline entry -->
-							<div class="timeline-entry rounded"><!-- .rounded = entry -->
-								29<span>Jun</span>
-								<div class="timeline-vline"><!-- vertical line --></div>
-							</div>
-							<!-- /timeline entry -->
-
-							<!-- IMAGE -->
-							<figure class="margin-bottom-20">
-								<img class="img-responsive" src="/assets/images/demo/content_slider/10-min.jpg" alt="">
-							</figure>
-
-							<h2><a href="blog-single-default.html">BLOG IMAGE POST</a></h2>
-
-							<ul class="blog-post-info list-inline">
-								<li>
-									<a href="#">
-										<i class="fa fa-clock-o"></i>
-										<span class="font-lato">June 29, 2015</span>
-									</a>
-								</li>
-								<li>
-									<a href="#">
-										<i class="fa fa-comment-o"></i>
-										<span class="font-lato">28 Comments</span>
-									</a>
-								</li>
-								<li>
-									<i class="fa fa-folder-open-o"></i>
-
-									<a class="category" href="#">
-										<span class="font-lato">Design</span>
-									</a>
-									<a class="category" href="#">
-										<span class="font-lato">Photography</span>
-									</a>
-								</li>
-								<li>
-									<a href="#">
-										<i class="fa fa-user"></i>
-										<span class="font-lato">John Doe</span>
-									</a>
-								</li>
-							</ul>
-
-							<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
-
-							<a href="blog-single-default.html" class="btn btn-reveal btn-default">
-								<i class="fa fa-plus"></i>
-								<span>Read More</span>
+							<a href="#" class="social-icon social-icon-border social-twitter pull-left" data-toggle="tooltip" data-placement="top" title="Twitter">
+								<i class="icon-twitter"></i>
+								<i class="icon-twitter"></i>
 							</a>
 
+							<a href="#" class="social-icon social-icon-border social-gplus pull-left" data-toggle="tooltip" data-placement="top" title="Google plus">
+								<i class="icon-gplus"></i>
+								<i class="icon-gplus"></i>
+							</a>
+
+							<a href="#" class="social-icon social-icon-border social-linkedin pull-left" data-toggle="tooltip" data-placement="top" title="Linkedin">
+								<i class="icon-linkedin"></i>
+								<i class="icon-linkedin"></i>
+							</a>
+
+							<a href="#" class="social-icon social-icon-border social-rss pull-left" data-toggle="tooltip" data-placement="top" title="Rss">
+								<i class="icon-rss"></i>
+								<i class="icon-rss"></i>
+							</a>
 						</div>
-						<!-- /POST ITEM -->
-
-
 
 					</div>
-					<!-- /TIMELINE -->
-
-
 				</div>
 			</section>
 			<!-- / -->
