--- a/views/schedule_list_detail.ejs
+++ b/views/schedule_list_detail.ejs
@@ -84,53 +84,55 @@
 						<div class="timeline"><!-- .timeline-inverse = right position [left on RTL] -->
 							<div class="timeline-hline"><!-- horizontal line --></div>
 
-							<!-- POST ITEM -->
-							<div class="blog-post-item">
+							<% for(var i = 1; i <= date_gap; i++) {%>
+								<!-- POST ITEM -->
+								<div class="blog-post-item">
 
-								<!-- timeline entry -->
-								<div class="timeline-entry rounded"><!-- .rounded = entry -->
-									<!--29<span>Jun</span>-->
-									<span>Day</span>1
-									<div class="timeline-vline"><!-- vertical line --></div>
+									<!-- timeline entry -->
+									<div class="timeline-entry rounded"><!-- .rounded = entry -->
+										<!--29<span>Jun</span>-->
+										<span>Day</span><%=i%>
+										<div class="timeline-vline"><!-- vertical line --></div>
+									</div>
+									<!-- /timeline entry -->
+
+									<!-- IMAGE -->
+									<figure class="margin-bottom-20">
+										<img class="img-responsive" src="/assets/images/demo/720x400/4-min.jpg" alt="">
+									</figure>
+
+									<h2><a href="blog-single-default.html">바닷가 여행 일정</a></h2>
+
+									<ul class="blog-post-info list-inline">
+										<li>
+											<a href="#">
+												<i class="fa fa-clock-o"></i>
+												<span class="font-lato"><%=dates[i-1]%></span>
+											</a>
+										</li>
+										<li>
+											<a href="#">
+												<i class="fa fa-comment-o"></i>
+												<span class="font-lato">28 Comments</span>
+											</a>
+										</li>
+										<li>
+											<a href="#">
+												<i class="fa fa-user"></i>
+												<span class="font-lato">John Doe</span>
+											</a>
+										</li>
+									</ul>
+
+									<p>일본 여행 첫날 ~~~~~~~...</p>
+									<a href="travel/detail" class="btn btn-reveal btn-default">
+										<i class="fa fa-plus"></i>
+										<span>자세히 보기</span>
+									</a>
+
 								</div>
-								<!-- /timeline entry -->
-
-								<!-- IMAGE -->
-								<figure class="margin-bottom-20">
-									<img class="img-responsive" src="/assets/images/demo/720x400/4-min.jpg" alt="">
-								</figure>
-
-								<h2><a href="blog-single-default.html">바닷가 여행 일정</a></h2>
-
-								<ul class="blog-post-info list-inline">
-									<li>
-										<a href="#">
-											<i class="fa fa-clock-o"></i>
-											<span class="font-lato">June 29, 2015</span>
-										</a>
-									</li>
-									<li>
-										<a href="#">
-											<i class="fa fa-comment-o"></i>
-											<span class="font-lato">28 Comments</span>
-										</a>
-									</li>
-									<li>
-										<a href="#">
-											<i class="fa fa-user"></i>
-											<span class="font-lato">John Doe</span>
-										</a>
-									</li>
-								</ul>
-
-								<p>일본 여행 첫날 ~~~~~~~...</p>
-								<a href="travel/detail" class="btn btn-reveal btn-default">
-									<i class="fa fa-plus"></i>
-									<span>자세히 보기</span>
-								</a>
-
-							</div>
-							<!-- /POST ITEM -->
+								<!-- /POST ITEM -->
+							<% }%>
 
 							<!-- POST ITEM -->
 							<div class="blog-post-item">
@@ -143,24 +145,12 @@
 								</div>
 								<!-- /timeline entry -->
 
-								<!-- IMAGE -->
-								<figure class="margin-bottom-20">
-									<img class="img-responsive" src="/assets/images/demo/720x400/6-min.jpg" alt="">
-								</figure>
-
-								<h2><a href="blog-single-default.html">바닷가 여행 일정</a></h2>
-
+								<br><br>
 								<ul class="blog-post-info list-inline">
 									<li>
 										<a href="#">
 											<i class="fa fa-clock-o"></i>
 											<span class="font-lato">June 29, 2015</span>
-										</a>
-									</li>
-									<li>
-										<a href="#">
-											<i class="fa fa-comment-o"></i>
-											<span class="font-lato">28 Comments</span>
 										</a>
 									</li>
 									<li>
@@ -171,10 +161,9 @@
 									</li>
 								</ul>
 
-								<p>일본 여행 첫날 ~~~~~~~...</p>
 								<a href="detail" class="btn btn-reveal btn-default">
 									<i class="fa fa-plus"></i>
-									<span>자세히 보기</span>
+									<span>작성 하기</span>
 								</a>
 
 							</div>
