--- a/views/schedule_list_detail.ejs
+++ b/views/schedule_list_detail.ejs
@@ -96,24 +96,12 @@
 									</div>
 									<!-- /timeline entry -->
 
-									<!-- IMAGE -->
-									<figure class="margin-bottom-20">
-										<img class="img-responsive" src="/assets/images/demo/720x400/4-min.jpg" alt="">
-									</figure>
-
-									<h2><a href="blog-single-default.html">바닷가 여행 일정</a></h2>
-
+									<br><br>
 									<ul class="blog-post-info list-inline">
 										<li>
 											<a href="#">
 												<i class="fa fa-clock-o"></i>
 												<span class="font-lato"><%=dates[i-1]%></span>
-											</a>
-										</li>
-										<li>
-											<a href="#">
-												<i class="fa fa-comment-o"></i>
-												<span class="font-lato">28 Comments</span>
 											</a>
 										</li>
 										<li>
@@ -124,10 +112,9 @@
 										</li>
 									</ul>
 
-									<p>일본 여행 첫날 ~~~~~~~...</p>
-									<a href="travel/detail" class="btn btn-reveal btn-default">
+									<a href="/detail/register" class="btn btn-reveal btn-default">
 										<i class="fa fa-plus"></i>
-										<span>자세히 보기</span>
+										<span>작성 하기</span>
 									</a>
 
 								</div>
@@ -165,8 +152,8 @@
 									<i class="fa fa-plus"></i>
 									<span>작성 하기</span>
 								</a>
-
 							</div>
+
 							<!-- /POST ITEM -->
 
 							<!-- POST ITEM -->
